--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@gsap/react": "^2.1.2",
     "aos": "^2.3.4",
     "axios": "^1.10.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router": "^7.6.3",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
